# Phi-Save-Codec

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: api.rs  c_api.rs  lib.rs  phi_base.rs  test.rs
app/src/api/: game_key.rs  game_record.rs  mod.rs  user.rs
app/src/game_key/: api.rs  field.rs  serde.rs
app/src/game_progress/: api.rs  field.rs  mod.rs  serde.rs
app/src/game_record/: api.rs  field.rs  mod.rs  serde.rs
app/src/phi_field/: base.rs  game_key.rs  game_record.rs  mod.rs  user.rs
app/src/settings/: field.rs  serde.rs
app/src/summary/: api.rs  field.rs  serde.rs
app/src/user/: api.rs  field.rs  serde.rs
bind/python/: .gitignore  README.md  phi_save_codec.py  pyproject.toml
bind/python/phi_save_codec/: __init__.py  bind.py  env.py  error.py
script/: Cargo.toml
script/src/: main.rs
shua_struct/src/: field.rs
shua_struct_macro/src/: lib.rs
