[package]
name = "phi_save_codec"
version = "0.2.2"
edition = "2024"
authors = ["Shua <CHA_Shua@outlook.com>"]
license = "MIT"
repository = "https://github.com/Shua-github/Phi-Save-Codec"
description = "Phigros Cloud Save Codec Library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shua_struct = { version = "0.4.0", features = ["all"] }
serde = { version = "1", features = ["derive"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }


[features]
default = []
with_serde = ["serde"]
c_abi = ["rmp-serde","serde"]