[project]
name = "phi_save_codec"
version = "0.2.3"
description = "Phigros Cloud Save Codec Library"
authors = [
    {name = "Shua-github", email = "CHA_shua@outlook.com"},
]
dependencies = ["wasmtime>=41.0.0", "msgpack>=1.1.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
pre_build = "cp -f ../../output/phi_save_codec.wasm ./phi_save_codec/bin/phi_save_codec.wasm"